forum tags alert fix. teampopup links need overflow visible and some might be in .alert. thus we set it to visible in alerts. that might not be wanted for all alert. something we should keep in mind
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7692 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -63,6 +63,11 @@ ul.ft-popup-list > li:hover {
 div.cfMessage, div.edited, div.cfHeader, div.feedItem, div.cfUserInfo, div.signature, div.playerInfo, .alert {
 	overflow: visible !important;
 }
+
+.HTMLToolbar  .alert {
+	overflow: hidden !important;
+}
+
 div.message {
 	overflow:auto;
 }
